# generate_difference

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: check_test.yml
gendiff/: .generate.py.swp  cli.py  gendiff.py  generate.py  make_str.py  opening.py  utils.py
gendiff/formarter/: json_format.py  json_formater.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_cli.py  test_formarter.py  test_gendiff.py  test_generate.py  test_json.py  test_opening.py  test_plain.py  test_utils.py
tests/fixtures/: file_to_test_json.json  result_json.json
