[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "for generate difference between two files (json or yaml)"
authors = ["Aliev Nurlan <nualiev420@gmail.com>"]
readme = "README.md"
packages = [{include = "gendiff"}]
repository = "https://github.com/Nurlan-Aliev/python-project-50"
classifiers = ["Topic :: system :: filesystems"]

[tool.poetry.dependencies]
python = "^3.8.1"
pytest-cov = "^4.0.0"
pyyaml = "^6.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.2.0"
pip = "^22.3.1"
pyyaml = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
